--- a/styles/estilo14.css
+++ b/styles/estilo14.css
@@ -1,3 +1,10 @@
+body {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .circuloRetangulo {
     width: 200px;
     height: 200px;
